--- a/21-rails-associations/taco-tracker/app/views/restaurants/show.html.erb
+++ b/21-rails-associations/taco-tracker/app/views/restaurants/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Restaurants#show</h1>
-<p>Find me in app/views/restaurants/show.html.erb</p>
+<h2><%= @restaurant.name %></h2>
+<div><%= @restaurant.address %></div>
+
+
+<% if !@restaurant.tacos.empty? %>
+    <div>Tacos</div>
+
+    <ul>
+        <% @restaurant.tacos.each do |taco| %>
+            <li><%= link_to taco.name, taco_path(taco) %></li>
+        <% end %>
+    </ul>
+<% end %>
