--- a/21-rails-associations/taco-tracker/app/views/restaurants/index.html.erb
+++ b/21-rails-associations/taco-tracker/app/views/restaurants/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Restaurants#index</h1>
 <p>Find me in app/views/restaurants/index.html.erb</p>
+
+<% @restaurants.each do |r| %>
+    <div><%= link_to r.name, restaurant_path(r) %></div>
+<% end %>
