--- a/22-rails-partials/taco-tracker/app/views/tacos/show.html.erb
+++ b/22-rails-partials/taco-tracker/app/views/tacos/show.html.erb
@@ -5,5 +5,9 @@
 <h3>Price: $<%= @taco.price %></h3>
 <h3>Vegetarian? <%= @taco.vegetarian %></h3>
 
+<div>Ingredients</div>
+<% @taco.ingredients.each do |i|%>
+    <div><%= i.name %></div>
+<% end %>
 <div><%= link_to "Edit This Taco", edit_taco_path(@taco.id) %>
 <div><%= link_to("Delete This Taco", taco_path(@taco.id), {method: :delete}) %></div>
