--- a/22-rails-partials/taco-tracker/app/views/tacos/edit.html.erb
+++ b/22-rails-partials/taco-tracker/app/views/tacos/edit.html.erb
@@ -1,11 +1,4 @@
 <h1>Edit This Taco</h1>
 
-<%= form_for @taco do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :price %>
-    <%= f.number_field :price, min: 0, step: 0.01 %>
-    <%= f.label :vegetarian %>
-    <%= f.select :vegetarian, [true, false] %>
-    <%= f.submit "Edit Taco" %>
-<% end %>
+<%= render partial: "taco_form", locals: {submit_text: "Change This Taco"} %>
+
